--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
   <color name="colorYellow">#ffca00</color>
   <color name="colorBlack">#000000</color>
   <color name="colorGray">#828282</color>
+  <color name="colorTextGray">#6D6D6D</color>
 
   <color name="colorPuzi">#ff2470</color>
 
