--- a/app/src/main/res/drawable/edittext.xml
+++ b/app/src/main/res/drawable/edittext.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="true" android:state_enabled="true">
         <shape>
             <stroke
-                android:width="1dip" android:color="#dadada"/>
+                android:width="1dip" android:color="@color/colorPuzi"/>
             <corners android:radius="5dip"/>
             <padding
                 android:left="7dip"
@@ -16,7 +16,7 @@
     <item android:state_focused="true" android:state_enabled="true">
         <shape>
             <stroke
-                android:width="1dip" android:color="#dadada"/>
+                android:width="1dip" android:color="@color/colorPuzi"/>
             <corners android:radius="5dip"/>
             <padding
                 android:left="7dip"
