--- a/app/src/main/res/layout/fragment_advertisement.xml
+++ b/app/src/main/res/layout/fragment_advertisement.xml
@@ -11,7 +11,7 @@
     android:layout_gravity="center"
     android:background="@color/colorWhite"
     android:orientation="vertical"
-    android:layout_marginLeft="5dp"
+    android:layout_marginTop="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
