--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -8,13 +8,17 @@
 
   <FrameLayout
     android:orientation="vertical"
-    android:layout_width="343dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:layout_width="match_parent"
     android:layout_height="240dp">
 
     <com.joooonho.SelectableRoundedImageView
       xmlns:app="http://schemas.android.com/apk/res-auto"
-      app:sriv_right_top_corner_radius="5dp"
-      app:sriv_left_top_corner_radius="5dp"
+      app:sriv_right_top_corner_radius="8dp"
+      app:sriv_left_top_corner_radius="8dp"
+      app:sriv_right_bottom_corner_radius="8dp"
+      app:sriv_left_bottom_corner_radius="8dp"
       app:sriv_oval="false"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -58,7 +62,7 @@
         android:orientation="vertical"
         android:layout_marginLeft="9dp"
         android:layout_gravity="center_vertical"
-        android:layout_width="250dp"
+        android:layout_width="240dp"
         android:layout_height="40dp">
 
         <TextView
