--- a/app/src/main/res/drawable/button_favorite_off.xml
+++ b/app/src/main/res/drawable/button_favorite_off.xml
@@ -2,13 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
     <shape>
-      <solid
-        android:color="#dadada" />
+      <stroke android:width="1dp" android:color="#dadada"/>
       <corners
-        android:bottomLeftRadius="27dp"
-        android:bottomRightRadius="27dp"
-        android:topLeftRadius="27dp"
-        android:topRightRadius="27dp" />
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp"
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp" />
     </shape>
   </item>
 </selector>
