--- a/app/src/main/res/drawable/button_favorite_on.xml
+++ b/app/src/main/res/drawable/button_favorite_on.xml
@@ -2,16 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
     <shape>
-      <gradient
-        android:angle="270"
-        android:endColor="#6d6d6d"
-        android:startColor="#6d6d6d" />
-
+      <stroke android:width="1dp" android:color="@color/colorPuzi"/>
       <corners
-        android:bottomLeftRadius="27dp"
-        android:bottomRightRadius="27dp"
-        android:topLeftRadius="27dp"
-        android:topRightRadius="27dp" />
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp"
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp" />
     </shape>
   </item>
 </selector>
