--- a/app/src/main/res/layout/activity_channel_filter.xml
+++ b/app/src/main/res/layout/activity_channel_filter.xml
@@ -7,7 +7,10 @@
   <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
+    <LinearLayout
+      android:background="#ffffff"
+      android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
+
       <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -15,36 +18,51 @@
         android:layout_height="match_parent">
 
         <ImageButton
-          android:layout_width="28dp"
-          android:layout_height="40dp"
-          android:paddingLeft="8dp"
-          android:paddingRight="8dp"
-          android:paddingTop="10dp"
-          android:paddingBottom="10dp"
+          android:layout_width="44dp"
+          android:layout_height="50dp"
+          android:paddingLeft="16dp"
+          android:paddingRight="16dp"
+          android:paddingTop="15dp"
+          android:paddingBottom="15dp"
           android:src="@drawable/back"
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_back"/>
 
         <TextView
-          android:text="필터링"
+          android:text="채널 필터링"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:textColor="#333333"
-          android:layout_marginRight="28dp"
-          android:textSize="16sp"
+          android:textSize="20sp"
           android:layout_gravity="center_vertical"
           android:layout_weight="1"/>
 
+        <ImageButton
+          android:src="@drawable/group_2"
+          android:layout_width="21.8dp"
+          android:layout_height="20.8dp"
+          android:layout_marginRight="19.1dp"
+          android:layout_gravity="center_vertical"
+          android:background="#00000000"
+          android:id="@+id/ibtn_channel_filter_all"/>
+
       </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:background="#dadada"
+        android:layout_height="1dp"/>
+
       <TextView
         android:text="성별"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="31dp"
+        android:layout_marginTop="19dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textColor="#333333" android:id="@+id/textView4"/>
+
       <LinearLayout
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
@@ -54,229 +72,258 @@
 
         <ImageButton
           android:layout_gravity="center_vertical"
-          android:layout_width="40dp"
-          android:layout_height="40dp"
-          android:src="@drawable/oval_4_copy_2"
+          android:layout_width="30dp"
+          android:layout_height="30dp"
+          android:layout_marginLeft="33dp"
+          android:src="@drawable/radio_off"
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_male"/>
 
         <TextView
           android:text="남성"
-          android:layout_marginRight="20dp"
+          android:layout_marginLeft="12dp"
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="20sp"
-          android:textColor="#333333"/>
+          android:textSize="16sp"
+          android:textColor="#6d6d6d"/>
 
         <ImageButton
           android:layout_gravity="center_vertical"
-          android:layout_width="40dp"
-          android:layout_height="40dp"
-          android:src="@drawable/oval_4_copy_2"
+          android:layout_width="30dp"
+          android:layout_height="30dp"
+          android:layout_marginLeft="52dp"
+          android:src="@drawable/radio_off"
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_female"/>
 
         <TextView
           android:text="여성"
+          android:layout_marginLeft="12dp"
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="20sp"
-          android:textColor="#333333"/>
+          android:textSize="16sp"
+          android:textColor="#6d6d6d"/>
 
       </LinearLayout>
+
       <TextView
-        android:text="연령대"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:text="나이"
+        android:layout_marginLeft="31dp"
+        android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textColor="#333333" android:id="@+id/textView3" android:layout_weight="1"/>
+
       <LinearLayout
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_gravity="center_horizontal"
         android:layout_height="match_parent">
 
-        <LinearLayout
-          android:orientation="vertical"
-          android:layout_width="80dp"
-          android:layout_height="wrap_content">
+        <ImageButton
+          android:layout_gravity="center_vertical"
+          android:layout_width="30dp"
+          android:layout_height="30dp"
+          android:layout_marginLeft="33dp"
+          android:src="@drawable/radio_off"
+          android:background="#00000000"
+          android:id="@+id/ibtn_channel_filter_10"/>
 
-          <ImageButton
-            android:layout_gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:src="@drawable/oval_4_copy_2"
-            android:background="#00000000"
-            android:id="@+id/ibtn_channel_filter_10"/>
-          <TextView
-            android:text="10대"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#333333"/>
-        </LinearLayout>
+        <TextView
+          android:text="10대"
+          android:layout_marginLeft="12dp"
+          android:layout_gravity="center_vertical"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textSize="16sp"
+          android:textColor="#6d6d6d"/>
 
-        <LinearLayout
-          android:orientation="vertical"
-          android:layout_width="80dp"
-          android:layout_height="wrap_content">
+        <ImageButton
+          android:layout_gravity="center_vertical"
+          android:layout_width="30dp"
+          android:layout_height="30dp"
+          android:layout_marginLeft="52dp"
+          android:src="@drawable/radio_off"
+          android:background="#00000000"
+          android:id="@+id/ibtn_channel_filter_20"/>
 
-          <ImageButton
-            android:layout_gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:src="@drawable/oval_4_copy_2"
-            android:background="#00000000"
-            android:id="@+id/ibtn_channel_filter_20"/>
-
-          <TextView
-            android:text="20대"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#333333"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-          android:orientation="vertical"
-          android:layout_width="80dp"
-          android:layout_height="wrap_content">
-
-          <ImageButton
-            android:layout_gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:src="@drawable/oval_4_copy_2"
-            android:background="#00000000"
-            android:id="@+id/ibtn_channel_filter_30"/>
-
-          <TextView
-            android:text="30대"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#333333"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-          android:orientation="vertical"
-          android:layout_width="80dp"
-          android:layout_height="wrap_content">
-
-          <ImageButton
-            android:layout_gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:src="@drawable/oval_4_copy_2"
-            android:background="#00000000"
-            android:id="@+id/ibtn_channel_filter_40"/>
-
-          <TextView
-            android:text="40대이상"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="#333333"/>
-
-        </LinearLayout>
+        <TextView
+          android:text="20대"
+          android:layout_marginLeft="12dp"
+          android:layout_gravity="center_vertical"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textSize="16sp"
+          android:textColor="#6d6d6d"/>
 
       </LinearLayout>
+
+      <LinearLayout
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageButton
+          android:layout_gravity="center_vertical"
+          android:layout_width="30dp"
+          android:layout_height="30dp"
+          android:layout_marginLeft="33dp"
+          android:src="@drawable/radio_off"
+          android:background="#00000000"
+          android:id="@+id/ibtn_channel_filter_30"/>
+
+        <TextView
+          android:text="30대"
+          android:layout_marginLeft="12dp"
+          android:layout_gravity="center_vertical"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textSize="16sp"
+          android:textColor="#6d6d6d"/>
+
+        <ImageButton
+          android:layout_gravity="center_vertical"
+          android:layout_width="30dp"
+          android:layout_height="30dp"
+          android:layout_marginLeft="52dp"
+          android:src="@drawable/radio_off"
+          android:background="#00000000"
+          android:id="@+id/ibtn_channel_filter_40"/>
+
+        <TextView
+          android:text="40대"
+          android:layout_marginLeft="12dp"
+          android:layout_gravity="center_vertical"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textSize="16sp"
+          android:textColor="#6d6d6d"/>
+
+      </LinearLayout>
+
       <TextView
         android:text="관심사"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="28dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textColor="#333333" android:id="@+id/textView2"/>
+
       <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="match_parent">
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_height="54dp">
 
         <Button
           android:text="뷰티"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_marginRight="16dp"
+          android:textSize="16sp"
+          android:textColor="#dadada"
+          android:background="@drawable/button_favorite_off"
           android:id="@+id/btn_channel_filter_beauty"
           android:layout_weight="1"/>
 
         <Button
           android:text="쇼핑"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:textColor="#dadada"
+          android:textSize="16sp"
           android:id="@+id/btn_channel_filter_shopping"
+          android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
 
       </LinearLayout>
       <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="match_parent" android:layout_weight="1">
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_height="54dp" android:layout_weight="1">
 
         <Button
           android:text="외식"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:textColor="#dadada"
+          android:textSize="16sp"
+          android:layout_marginRight="16dp"
           android:id="@+id/btn_channel_filter_eat"
+          android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
 
         <Button
-          android:text="여행"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:text="여행\n(항공,호텔)"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:textColor="#dadada"
+          android:textSize="16sp"
           android:id="@+id/btn_channel_filter_tour"
+          android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
 
       </LinearLayout>
       <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="match_parent">
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_height="54dp">
 
         <Button
-          android:text="문화"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:text="문화\n(콘서트,공연)"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_marginRight="16dp"
+          android:layout_marginTop="0dp"
+          android:textColor="#dadada"
+          android:textSize="16sp"
           android:id="@+id/btn_channel_filter_culture"
+          android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
 
         <Button
           android:text="게임"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:textColor="#dadada"
+          android:textSize="16sp"
           android:id="@+id/btn_channel_filter_game"
+          android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
 
       </LinearLayout>
       <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="match_parent">
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_height="54dp">
 
         <Button
-          android:text="금융"
+          android:text="금융\n(보험,재테크)"
           android:layout_width="0dp"
-          android:layout_height="wrap_content"
+          android:layout_height="match_parent"
+          android:layout_marginRight="16dp"
+          android:textColor="#dadada"
+          android:textSize="16sp"
           android:id="@+id/btn_channel_filter_finance"
+          android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
 
         <LinearLayout
@@ -284,21 +331,18 @@
           android:layout_width="0dp"
           android:layout_height="match_parent"/>
       </LinearLayout>
-      <Button
-        android:text="전체선택"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:id="@+id/btn_channel_filter_all" android:layout_weight="1"/>
+
       <Button
         android:text="선택완료"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_height="54dp"
+        android:textSize="16dp"
+        android:textColor="@color/colorWhite"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="34dp"
+        android:background="@drawable/button_puzi"
         android:id="@+id/btn_channel_filter_confirm"/>
     </LinearLayout>
   </ScrollView>
