--- a/app/src/main/res/layout/item_channel_list_channel.xml
+++ b/app/src/main/res/layout/item_channel_list_channel.xml
@@ -10,7 +10,7 @@
   <LinearLayout
     android:orientation="horizontal"
     android:padding="0dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -20,7 +20,7 @@
       android:layout_marginRight="7.5dp"
       android:layout_width="0dp"
       android:layout_weight="1"
-      android:background="@color/colorWhite"
+      android:background="@drawable/channel_item_background"
       android:layout_height="match_parent">
 
       <com.joooonho.SelectableRoundedImageView
@@ -124,7 +124,7 @@
       android:orientation="vertical"
       android:layout_marginRight="16dp"
       android:layout_marginLeft="7.5dp"
-      android:background="@color/colorWhite"
+      android:background="@drawable/channel_item_background"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent" >
