--- a/app/src/main/res/layout/item_channel_list_editorspage.xml
+++ b/app/src/main/res/layout/item_channel_list_editorspage.xml
@@ -6,7 +6,7 @@
 
   <LinearLayout
     android:orientation="horizontal"
-    android:background="@color/colorWhite"
+    android:background="@drawable/channel_item_background"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:layout_width="match_parent"
