--- a/app/src/main/res/layout/activity_advertisement_detail.xml
+++ b/app/src/main/res/layout/activity_advertisement_detail.xml
@@ -195,6 +195,7 @@
       <TextView
         android:id="@+id/tv_ad_state"
         android:gravity="center"
+        android:layout_marginRight="37dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
