--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -8,6 +8,7 @@
               android:gravity="center">
 
   <FrameLayout
+    android:layout_marginTop="16dp"
     android:paddingLeft="7dp"
     android:paddingRight="7dp"
     android:paddingBottom="10dp"
