--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,11 +98,10 @@
   </LinearLayout>
 
   <com.puzi.puzi.ui.CustomViewPager
-    android:id="@+id/vp_main"
-    android:layout_weight="1"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-  </com.puzi.puzi.ui.CustomViewPager>
+      android:id="@+id/vp_main"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_weight="1"></com.puzi.puzi.ui.CustomViewPager>
 
   <LinearLayout
     android:id="@+id/intro_fragment_line"
@@ -174,10 +173,10 @@
         android:layout_gravity="center"/>
 
       <Button
-        android:id="@+id/btn_store"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00000000"/>
+          android:id="@+id/btn_store"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:background="#00000000" />
 
     </FrameLayout>
 
