--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -2,21 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
-              android:layout_width="328dp"
-              android:layout_height="224dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:background="@null"
               android:gravity="center">
 
   <FrameLayout
     android:layout_marginTop="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginLeft="16dp"
     android:paddingLeft="7dp"
     android:paddingRight="7dp"
     android:paddingBottom="10dp"
     android:background="@drawable/shadow_ad"
     android:layout_gravity="center"
     android:orientation="vertical"
-    android:layout_width="328dp"
-    android:layout_height="224dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <com.joooonho.SelectableRoundedImageView
       xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -54,6 +56,7 @@
         app:sriv_right_bottom_corner_radius="75dp"
         app:sriv_border_color="#979797"
         app:sriv_border_width="1dp"
+        android:src="#f0f0f0"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="17dp"
         android:layout_width="40dp"
@@ -73,6 +76,10 @@
           android:textSize="20sp"
           android:textColor="#333333"
           android:text="광고 타이틀 자리입니다"
+          android:maxLines="1"
+          android:focusableInTouchMode="true"
+          android:focusable="true"
+          android:ellipsize="end"
           android:layout_width="match_parent"
           android:layout_height="25dp"
           android:id="@+id/tv_advertise"/>
@@ -91,6 +98,7 @@
       <ImageView
         android:layout_width="16dp"
         android:layout_height="16dp"
+        android:scaleType="centerCrop"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:id="@+id/iv_advertiseNew"/>
