171025 jh setting commit

--- a/app/src/main/res/layout/fragment_setting_notice_favorites.xml
+++ b/app/src/main/res/layout/fragment_setting_notice_favorites.xml
@@ -45,7 +45,7 @@
 
           <Button
             android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_beauty"
+            android:id="@+id/btn_setting_beauty"
             android:text="뷰티"
             android:textSize="16sp"
             android:textColor="@color/colorTextGray"
@@ -56,7 +56,7 @@
 
           <Button
             android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_shopping"
+            android:id="@+id/btn_setting_shopping"
             android:text="쇼핑"
             android:textSize="16sp"
             android:textColor="@color/colorTextGray"
@@ -67,7 +67,7 @@
 
           <Button
             android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_game"
+            android:id="@+id/btn_setting_game"
             android:text="게임"
             android:textSize="16sp"
             android:textColor="@color/colorTextGray"
@@ -78,7 +78,7 @@
 
           <Button
             android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_eat"
+            android:id="@+id/btn_setting_eat"
             android:text="외식"
             android:textSize="16sp"
             android:textColor="@color/colorTextGray"
@@ -89,7 +89,7 @@
 
           <Button
             android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_tour"
+            android:id="@+id/btn_setting_tour"
             android:text="여행\n(항공,호텔)"
             android:textSize="16sp"
             android:textColor="@color/colorTextGray"
@@ -100,7 +100,7 @@
 
           <Button
             android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_finance"
+            android:id="@+id/btn_setting_finance"
             android:text="금융(보험,제테크)"
             android:textSize="16sp"
             android:textColor="@color/colorTextGray"
@@ -110,7 +110,7 @@
 
           <Button
             android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_culture"
+            android:id="@+id/btn_setting_culture"
             android:text="문화\n(콘서트,공연)"
             android:textSize="16sp"
             android:textColor="@color/colorTextGray"
