--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,24 @@
               android:orientation="vertical" >
 
   <LinearLayout
+    android:visibility="gone"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:id="@+id/ll_main_setting"
+    android:layout_width="match_parent"
+    android:layout_height="54dp">
+
+    <TextView
+      android:text="설정"
+      android:textColor="#333333"
+      android:textSize="20sp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"/>
+
+  </LinearLayout>
+
+  <LinearLayout
+    android:id="@+id/ll_main_bar"
     android:orientation="horizontal"
     android:gravity="center"
     android:layout_width="match_parent"
