--- a/app/src/main/res/layout/fragment_setting_notice.xml
+++ b/app/src/main/res/layout/fragment_setting_notice.xml
@@ -11,9 +11,10 @@
     android:background="@color/colorWhite"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
-    <AnimatedExpandableListView
+    <com.puzi.puzi.ui.setting.AnimatedExpandableListView
+      xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/lv_notice"
