--- a/app/src/main/res/layout/fragment_setting_notice_favorites.xml
+++ b/app/src/main/res/layout/fragment_setting_notice_favorites.xml
@@ -12,135 +12,128 @@
 
     <LinearLayout
       android:orientation="vertical"
+      android:gravity="center_vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="48dp"
+      android:layout_marginTop="19dp"
       android:layout_marginLeft="32dp"
       android:layout_marginRight="32dp">
 
-      <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center_vertical"
+      <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp">
+        android:layout_height="24dp"
+        android:gravity="left"
+        android:textSize="16sp"
+        android:textColor="@color/colorBlack"
+        android:text="관심분야"/>
 
-        <TextView
-          android:layout_width="match_parent"
-          android:layout_height="24dp"
-          android:gravity="left"
+      <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="295dp"
+        android:id="@+id/gl_favorites"
+        android:layout_gravity="center"
+        android:columnCount="2"
+        android:layout_marginTop="8dp">
+
+        <Button
+          android:background="@drawable/button_favorite_off"
+          android:id="@+id/btn_setting_beauty"
+          android:text="뷰티"
           android:textSize="16sp"
-          android:textColor="@color/colorBlack"
-          android:text="관심분야"/>
+          android:textColor="@color/colorTextGray"
+          android:layout_marginRight="8dp"
+          android:layout_marginBottom="15dp"
+          android:layout_width="140dp"
+          android:layout_height="60dp"/>
 
-        <GridLayout
-          android:layout_width="match_parent"
-          android:layout_height="295dp"
-          android:id="@+id/gl_favorites"
-          android:layout_gravity="center"
-          android:columnCount="2"
-          android:layout_marginTop="8dp">
+        <Button
+          android:background="@drawable/button_favorite_off"
+          android:id="@+id/btn_setting_shopping"
+          android:text="쇼핑"
+          android:textSize="16sp"
+          android:textColor="@color/colorTextGray"
+          android:layout_marginLeft="8dp"
+          android:layout_marginBottom="15dp"
+          android:layout_width="140dp"
+          android:layout_height="60dp"/>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_setting_beauty"
-            android:text="뷰티"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+        <Button
+          android:background="@drawable/button_favorite_off"
+          android:id="@+id/btn_setting_game"
+          android:text="게임"
+          android:textSize="16sp"
+          android:textColor="@color/colorTextGray"
+          android:layout_marginRight="8dp"
+          android:layout_marginBottom="15dp"
+          android:layout_width="140dp"
+          android:layout_height="60dp"/>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_setting_shopping"
-            android:text="쇼핑"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+        <Button
+          android:background="@drawable/button_favorite_off"
+          android:id="@+id/btn_setting_eat"
+          android:text="외식"
+          android:textSize="16sp"
+          android:textColor="@color/colorTextGray"
+          android:layout_marginLeft="8dp"
+          android:layout_marginBottom="15dp"
+          android:layout_width="140dp"
+          android:layout_height="60dp"/>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_setting_game"
-            android:text="게임"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+        <Button
+          android:background="@drawable/button_favorite_off"
+          android:id="@+id/btn_setting_tour"
+          android:text="여행\n(항공,호텔)"
+          android:textSize="16sp"
+          android:textColor="@color/colorTextGray"
+          android:layout_marginRight="8dp"
+          android:layout_marginBottom="15dp"
+          android:layout_width="140dp"
+          android:layout_height="60dp"/>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_setting_eat"
-            android:text="외식"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+        <Button
+          android:background="@drawable/button_favorite_off"
+          android:id="@+id/btn_setting_finance"
+          android:text="금융(보험,제테크)"
+          android:textSize="16sp"
+          android:textColor="@color/colorTextGray"
+          android:layout_marginLeft="8dp"
+          android:layout_width="140dp"
+          android:layout_height="60dp"/>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_setting_tour"
-            android:text="여행\n(항공,호텔)"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+        <Button
+          android:background="@drawable/button_favorite_off"
+          android:id="@+id/btn_setting_culture"
+          android:text="문화\n(콘서트,공연)"
+          android:textSize="16sp"
+          android:textColor="@color/colorTextGray"
+          android:layout_width="140dp"
+          android:layout_height="60dp"
+          android:layout_marginBottom="15dp"/>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_setting_finance"
-            android:text="금융(보험,제테크)"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginLeft="8dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+      </GridLayout>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_setting_culture"
-            android:text="문화\n(콘서트,공연)"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_width="140dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="15dp"/>
-
-        </GridLayout>
-
-        <TextView
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_marginTop="13dp"
-          android:textSize="12sp"
-          android:text="3개 이상 선택해주세요"
-          android:gravity="left" android:id="@+id/textView5"/>
-
-      </LinearLayout>
-
-      <Button
+      <TextView
         android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:layout_marginBottom="20dp"
-        android:id="@+id/btn_setting_user_modify"
-        android:textSize="15sp"
-        android:text="비밀번호 찾기"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/button_search"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="13dp"
+        android:textSize="12sp"
+        android:text="3개 이상 선택해주세요"
+        android:gravity="left" android:id="@+id/textView5"/>
 
     </LinearLayout>
+
+    <Button
+      android:layout_marginLeft="32dp"
+      android:layout_marginRight="32dp"
+      android:layout_marginTop="40dp"
+      android:layout_width="match_parent"
+      android:layout_height="54dp"
+      android:layout_marginBottom="20dp"
+      android:id="@+id/btn_setting_user_modify"
+      android:textSize="15sp"
+      android:text="수정하기"
+      android:textColor="@color/colorWhite"
+      android:background="@drawable/button_search"/>
 
   </LinearLayout>
 
