--- a/app/src/main/res/layout/fragment_setting_notice_item_child.xml
+++ b/app/src/main/res/layout/fragment_setting_notice_item_child.xml
@@ -5,11 +5,17 @@
               android:layout_height="match_parent">
 
   <LinearLayout
-    android:padding="10dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:paddingLeft="14dp"
+    android:paddingRight="14dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
+      android:textSize="16sp"
+      android:textColor="#6d6d6d"
+      android:lineSpacingExtra="8sp"
       android:id="@+id/tv_setting_notice_content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
