--- a/app/src/main/res/layout/fragment_setting_notice_item_parent.xml
+++ b/app/src/main/res/layout/fragment_setting_notice_item_parent.xml
@@ -4,23 +4,32 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-  <LinearLayout
-    android:gravity="center_vertical"
-    android:orientation="vertical"
+  <FrameLayout
+    android:id="@+id/fl_setting_notice"
+    android:layout_below="@id/ll_fl_container"
     android:layout_width="match_parent"
-    android:layout_height="54.3dp">
+    android:layout_height="53dp"
+    android:layout_marginBottom="5dp">
 
     <TextView
+      android:layout_marginLeft="16dp"
+      android:textColor="#333333"
+      android:textSize="16sp"
+      android:layout_gravity="center_vertical|left"
+      android:layout_centerVertical="true"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
       android:id="@+id/tv_setting_notice"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+      android:layout_weight="0.6"/>
 
     <ImageView
-      android:id="@+id/iv_setting_notice"
-      android:layout_gravity="right"
-      android:layout_width="50dp"
-      android:layout_height="50dp"/>
+      android:layout_marginRight="16dp"
+      android:layout_width="12.5dp"
+      android:layout_height="21dp"
+      android:layout_gravity="center_vertical|right"
+      android:src="@drawable/back_chevron_copy"
+      android:id="@+id/iv_setting_notice"/>
+  </FrameLayout>
 
-  </LinearLayout>
 
 </LinearLayout>
