--- a/app/src/main/res/layout/fragment_setting_user.xml
+++ b/app/src/main/res/layout/fragment_setting_user.xml
@@ -5,7 +5,6 @@
               android:layout_height="match_parent">
 
   <LinearLayout
-    android:id="@+id/ll_searchpw"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,114 +13,107 @@
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="48dp"
+      android:layout_marginTop="19dp"
       android:layout_marginLeft="32dp"
       android:layout_marginRight="32dp">
 
-      <LinearLayout
-        android:orientation="vertical"
+      <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp">
+        android:layout_height="24dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="16sp"
+        android:textColor="@color/colorBlack"
+        android:text="이메일"
+        android:gravity="left" />
 
-        <TextView
-          android:layout_width="match_parent"
-          android:layout_height="24dp"
-          android:layout_marginBottom="8dp"
-          android:textSize="16sp"
-          android:textColor="@color/colorBlack"
-          android:text="이메일"
-          android:gravity="left" />
-
-        <EditText
-          android:background="@drawable/edittext"
-          android:layout_width="match_parent"
-          android:layout_height="64dp"
-          android:textSize="15sp"
-          android:id="@+id/edt_setting_email"
-          android:textColorHint="#6D6D6D"
-          android:hint="이메일 주소를 입력하세요."
-          android:ems="15"
-          android:maxLines="1"
-          android:inputType="textEmailAddress"
-          android:paddingBottom="15dp"
-          android:paddingTop="15dp"
-          android:paddingLeft="15dp"/>
-
-      </LinearLayout>
-
-      <LinearLayout
-        android:orientation="vertical"
+      <EditText
+        android:background="@drawable/edittext"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp">
-
-        <TextView
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_marginBottom="8dp"
-          android:textSize="16sp"
-          android:textColor="@color/colorBlack"
-          android:text="비밀번호"
-          android:gravity="left" />
-
-        <EditText
-          android:background="@drawable/edittext"
-          android:layout_width="match_parent"
-          android:layout_height="64dp"
-          android:textSize="15sp"
-          android:id="@+id/edt_setting_pw"
-          android:textColorHint="#6D6D6D"
-          android:hint="비밀번호를 입력하세요"
-          android:paddingBottom="15dp"
-          android:paddingTop="15dp"
-          android:paddingLeft="15dp"
-          android:inputType="textPassword"
-          android:ems="15"
-          android:maxLines="1"/>
-
-        <EditText
-          android:background="@drawable/edittext"
-          android:layout_width="match_parent"
-          android:layout_height="64dp"
-          android:textSize="15sp"
-          android:id="@+id/edt_setting_repw"
-          android:textColorHint="#6D6D6D"
-          android:hint="비밀번호를 다시 입력하세요"
-          android:paddingBottom="15dp"
-          android:paddingTop="15dp"
-          android:paddingLeft="15dp"
-          android:layout_marginTop="8dp"
-          android:inputType="textPassword"
-          android:ems="15"
-          android:maxLines="1"/>
-
-        <TextView
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_marginTop="5dp"
-          android:textSize="12sp"
-          android:textColor="#333333"
-          android:text="8-15자 이내,\n숫자, 영문 대소문자, 특수문자 중 3개 이상 조합해주세요."
-          android:gravity="left" />
-
-      </LinearLayout>
-
-      <Button
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:layout_marginBottom="20dp"
-        android:id="@+id/btn_setting_user_modify"
+        android:layout_height="64dp"
         android:textSize="15sp"
-        android:text="비밀번호 찾기"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/button_search"/>
+        android:id="@+id/edt_setting_email"
+        android:textColorHint="#6D6D6D"
+        android:hint="이메일 주소를 입력하세요."
+        android:ems="15"
+        android:maxLines="1"
+        android:inputType="textEmailAddress"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"/>
 
     </LinearLayout>
+
+    <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="19dp"
+      android:layout_marginLeft="32dp"
+      android:layout_marginRight="32dp">
+
+      <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
+        android:textSize="16sp"
+        android:textColor="@color/colorBlack"
+        android:text="비밀번호"
+        android:gravity="left" />
+
+      <EditText
+        android:background="@drawable/edittext"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:textSize="15sp"
+        android:id="@+id/edt_setting_pw"
+        android:textColorHint="#6D6D6D"
+        android:hint="비밀번호를 입력하세요"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"
+        android:inputType="textPassword"
+        android:ems="15"
+        android:maxLines="1"/>
+
+      <EditText
+        android:background="@drawable/edittext"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:textSize="15sp"
+        android:id="@+id/edt_setting_repw"
+        android:textColorHint="#6D6D6D"
+        android:hint="비밀번호를 다시 입력하세요"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"
+        android:layout_marginTop="8dp"
+        android:inputType="textPassword"
+        android:ems="15"
+        android:maxLines="1"/>
+
+      <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:textSize="12sp"
+        android:textColor="#333333"
+        android:text="8-15자 이내,\n숫자, 영문 대소문자, 특수문자 중 3개 이상 조합해주세요."
+        android:gravity="left" />
+
+    </LinearLayout>
+
+    <Button
+      android:layout_marginLeft="32dp"
+      android:layout_marginRight="32dp"
+      android:layout_marginTop="40dp"
+      android:layout_width="match_parent"
+      android:layout_height="54dp"
+      android:layout_marginBottom="20dp"
+      android:id="@+id/btn_setting_user_modify"
+      android:textSize="15sp"
+      android:text="수정하기"
+      android:textColor="@color/colorWhite"
+      android:background="@drawable/button_search"/>
 
   </LinearLayout>
 
